start game logic(before I comment everything out)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link type="text/css" rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="matchboard">
+        <div id="player_one"></div>
+        <div id="player_two"></div>
+    </div>
+    <div id="gameboard">
+        <div id="grid_container">
+            <div id="grid_1"></div>
+            <div id="grid_2"></div>
+            <div id="grid_3"></div>
+            <div id="grid_4"></div>
+            <div id="grid_5"></div>
+            <div id="grid_6"></div>
+            <div id="grid_7"></div>
+            <div id="grid_8"></div>
+            <div id="grid_9"></div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
