--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
 </head>
 <body>
     <div id="matchboard">
-        <div id="player_one"></div>
-        <div id="player_two"></div>
+        <div id="player_one">player one     sign: <span id="one_sign">x</span></div>
+        <div id="one_score">score: 0</div>
+        <div id="player_two"> player two    sign: <span id="two_sign">o</span></div>
+        <div id="two_score">score: 0</div>
+        <div id="turn">Note: player <span id="turn_sign">x</span>'s turn</div>
     </div>
     <div id="gameboard">
         <div id="grid_container">
-            <div id="grid_1"></div>
-            <div id="grid_2"></div>
-            <div id="grid_3"></div>
-            <div id="grid_4"></div>
-            <div id="grid_5"></div>
-            <div id="grid_6"></div>
-            <div id="grid_7"></div>
-            <div id="grid_8"></div>
-            <div id="grid_9"></div>
+            <div class="grid_squares" id="grid_1"> </div>
+            <div class="grid_squares" id="grid_2"> </div>
+            <div class="grid_squares"  id="grid_3"> </div>
+            <div class="grid_squares"  id="grid_4"> </div>
+            <div class="grid_squares"  id="grid_5"> </div>
+            <div class="grid_squares"  id="grid_6"> </div>
+            <div class="grid_squares"  id="grid_7"> </div>
+            <div class="grid_squares"  id="grid_8"> </div>
+            <div class="grid_squares"  id="grid_9"> </div>
         </div>
     </div>
     <script src="script.js"></script>
