added winning and tie-ing logic

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <div class="grid_squares"  id="grid_8"> </div>
             <div class="grid_squares"  id="grid_9"> </div>
         </div>
+        <div id="game_result">
+            
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
