added reset logic

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <div class="grid_squares"  id="grid_9"> </div>
         </div>
         <div id="game_result">
-            
+            Game not over.
         </div>
+        <button id="button_restart">Restart</button>
     </div>
     <script src="script.js"></script>
 </body>
